--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -44,24 +44,6 @@ html
                   role='presentation', 
                   href='/admin/dashboard',
                   style='display:none')#adminPage Admin Manager
-            //- Search
-            //- li.nav-item.dropdown
-            //-   a.dropdown-toggle.nav-link(
-            //-     data-toggle='dropdown', 
-            //-     aria-expanded='false', 
-            //-     href='#')#searchDropdown
-            //-     i.fas.fa-search(style="font-size: 15px;")
-            //-   .dropdown-menu(role='menu').col-4
-            //-     form.form-inline.my-2.my-lg-0.m-auto(action="/search")
-            //-       input.form-control.col-6.ml-2(
-            //-         type='search', 
-            //-         placeholder='Search',
-            //-         name="search",
-            //-       )
-            //-       input(type="hidden", value="1", name="page")
-            //-       input(type="submit", value="Go").form-control.ml-2
-            //-     .text-center.mt-2
-            //-       a(href="/search") More
             //- Cart & Bill
             li.nav-item.dropdown
               a.dropdown-toggle.nav-link(
@@ -72,7 +54,7 @@ html
               .dropdown-menu(role='menu').col-4
                 a#goToCart(href="/cart").dropdown-item Cart
                 a#goToBill(href="").dropdown-item Bill
-            //- search 2
+            //- search 
             li.nav-item
               form(action="/search")
                 .search__wrapper
@@ -82,8 +64,8 @@ html
             a(href="/search?search=&page=1&price=&producer=&sortByName=&sortByPrice=").mt-1.ml-2 More
 
     block content
-      //- Footer
-    
+
+    //- Footer
     footer#contact.footer-dark
       .container
         .row
@@ -119,100 +101,10 @@ html
             a(href='#')
               i.icon.ion-social-instagram
         p.copyright Company Name © 2017
+
     script(src='/public/home/js/jquery.min.js')
     script(src='/public/home/bootstrap/js/bootstrap.min.js')
     script(src='/public/home/js/jquery-ui.min.js')
     script(src='/public/home/js/new-age.js')
     script(src="/public/js/scripts.js")
     script(src="/public/js/axios.min.js")
-
-
-//- doctype html
-//- html
-//-   head
-//-     title This is Title :)
-    
-//-     link(rel="stylesheet", href="/public/css/bootstrap.min.css")
-//-     link(rel="stylesheet", href="/public/fontawesome/css/all.min.css")
-//-     link(rel="stylesheet", href="/public/css/styles.css")
-//-     link(rel="shortcut icon", href="/public/img/icon.jpg")
-//-   body
-//-     //- Navbar
-//-     nav.navbar.navbar-expand-lg.navbar-light.bg-light.fixed-top.border-bottom
-//-         a.navbar-brand(href='/') ShopPi
-//-         button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
-//-           span.navbar-toggler-icon
-//-         #navbarSupportedContent.collapse.navbar-collapse
-//-           ul.navbar-nav.mr-auto
-//-               li.nav-item
-//-                 a.nav-link(href='/') Home
-//-               li.nav-item
-//-                 a.nav-link(href='/') About
-//-               li.nav-item
-//-                 a.nav-link.active(target="blank",href='https://www.facebook.com/ninhnguyen375') Contact Us
-//-               li.nav-item(style='display:none')#adminPage
-//-                 a.nav-link.active(href='/admin/dashboard') Admin Page
-//-           //- Search
-//-           form.form-inline.my-2.my-lg-0.m-auto(action="/search")
-//-               input.form-control.mr-2(
-//-                 type='search', 
-//-                 placeholder='Search',
-//-                 name="search",
-//-               )
-//-               input(type="hidden", value="1", name="page")
-//-               button.btn.btn-light
-//-                 i.fas.fa-search
-//-               a(href="/search").btn.btn-light.ml-2 More
-          
-//-           //- category
-//-           .dropdown.mr-3
-//-             button#dropdownMenuButton.btn.btn-outline-primary.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
-//-               | Category
-//-             .dropdown-menu(aria-labelledby='dropdownMenuButton')
-//-               each producer in producers
-//-                 a.dropdown-item(href=`/?producer=${producer.producer_id}&&page=1`)= producer.producer_name
-//-           //- end category
-//-           a(href="/user/login").btn.btn-light#login Login
-//-           span | 
-//-           a(href="/user/signup").btn.btn-light#signup Sign up
-//-           //- Cart & Bill
-//-           .dropdown.ml-2
-//-             button#dropdownMenuButton.btn.btn-outline-primary.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
-//-               i.fas.fa-shopping-cart
-//-             .dropdown-menu(aria-labelledby='dropdownMenuButton')
-//-               a#goToCart(href="/cart").dropdown-item Cart
-//-               a#goToBill(href="").dropdown-item Bill
-//-           //- end Cart & Bill
-//-           //- a(href="/cart")
-//-           //-   button.btn.btn-light
-//-           //-     i.fas.fa-shopping-cart(style="font-size: 20px;color:#4e7bff")
-//-     //- End navbar
-//-     block content
-//-     //- Footer
-//-     .container-fluid.bg-light.pt-2.pb-2#footer
-//-         .row
-//-           .col-6 Copyright © ShopPi
-//-           .col-6.text-right
-//-               a(href='https://github.com/ninhnguyen375/doanweb2') Project on GitHub
-//-               i.fab.fa-github.ml-2
-
-//-     //- End Footer
-//-     #showAuth(style="display: none;background: rgba(0,0,0,0.5);position:fixed;top:0;left:0;right:0;width:100%;height:100%")  
-//-       aside.profile-card(style="")
-//-         .container#profile-card-content
-//-           .h4.text-secondary.text-right.mb-3#authName none
-//-           table.table 
-//-               tr
-//-                 td Email : 
-//-                 td.text-right#authEmail none
-//-               tr
-//-                 td Phone : 
-//-                 td.text-right#authPhone te
-//-               tr
-//-                 td Permisstion : 
-//-                 td.text-right.text-black-50#authPermission te
-//-     script(src="/public/js/scripts.js")    
-//-     script(src="/public/js/jquery.min.js")
-//-     script(src="/public/js/popper.js")
-//-     script(src="/public/js/bootstrap.min.js")
-//-     script(src="/public/js/axios.min.js")
