--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -88,11 +88,11 @@ html
               li
                 a(href='#') Careers
           .col-md-6.item.text
-            h3 Company Name
+            h3 ShopPhone
             p
               | Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel in justo.
           .col.item.social
-            a(href='#')
+            a(href='https://www.facebook.com/ninhnguyen375' target="blank")
               i.icon.ion-social-facebook
             a(href='#')
               i.icon.ion-social-twitter
@@ -100,7 +100,9 @@ html
               i.icon.ion-social-snapchat
             a(href='#')
               i.icon.ion-social-instagram
-        p.copyright Company Name © 2017
+            a(href='https://github.com/ninhnguyen375/doanweb2' target="blank")
+              i.icon.ion-social-github
+        p.copyright ShopPhone © 2017
 
     script(src='/public/home/js/jquery.min.js')
     script(src='/public/home/bootstrap/js/bootstrap.min.js')
