--- a/views/product/index.pug
+++ b/views/product/index.pug
@@ -33,7 +33,7 @@ block content
               //- Plus Button
               button.btn.btn-light.border.rounded-0.ml-1(type='button',
                 onclick='minusQuantity()')
-                i.fa.fa-plus(style='color: rgb(102,102,102);')
+                i.fas.fa-minus(style='color: rgb(102,102,102);')
               //- Quantity
               input.border.rounded-0(
                 type='text', 
