--- a/views/search/get.pug
+++ b/views/search/get.pug
@@ -9,7 +9,7 @@
         img(src= products[i].product_img, alt='pr-sample25')
       figcaption
         .date
-          i.fas.fa-cart-plus
+          i.fas.fa-info
         h3= products[i].product_name
         h4= found.producer_name
         p It is a long established fact that a reader will be distracted.
