--- a/views/user/login.pug
+++ b/views/user/login.pug
@@ -3,7 +3,8 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, shrink-to-fit=no')
-    title Untitled
+    title Login
+    link(rel='shortcut icon', href='/public/img/icon.jpg')
     link(rel='stylesheet', href='/public/login/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/public/login/fonts/ionicons.min.css')
     link(rel='stylesheet', href='/public/login/css/Login-Form-Dark.css')
