--- a/views/search/index.pug
+++ b/views/search/index.pug
@@ -48,7 +48,7 @@ block content
             img(src= products[i].product_img, alt='pr-sample25')
           figcaption
             .date
-              i.fas.fa-cart-plus
+              i.fas.fa-info
             h3= products[i].product_name
             h4= found.producer_name
             p It is a long established fact that a reader will be distracted.
