import react - admin page

--- a/views/admin/bill.pug
+++ b/views/admin/bill.pug
@@ -68,7 +68,7 @@ block content
               button.xoa_sp(
                 type='button', 
                 data-toggle='modal',
-                data-target='#form' + bills[i].id) Edit
+                data-target='#edit' + bills[i].id) Edit
               //- Modal
               form(
                 action="/admin/bill/edit", 
