--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -16,7 +16,7 @@ html
   body#page-top
     nav#mainNav.navbar.navbar-light.navbar-expand-lg.fixed-top
       .container
-        a.navbar-brand.js-scroll-trigger(href='/') ShopPhone
+        a.navbar-brand.js-scroll-trigger(href='/home') ShopPhone
         button.navbar-toggler.float-right(data-toggle='collapse', data-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
           i.fa.fa-bars
         #navbarResponsive.collapse.navbar-collapse
@@ -42,7 +42,7 @@ html
                 a.dropdown-item(role='presentation', href='/user/signup')#signup Sign Up
                 a.dropdown-item(
                   role='presentation', 
-                  href='/admin/dashboard',
+                  href='/admin',
                   style='display:none')#adminPage Admin Manager
             //- Cart & Bill
             li.nav-item.dropdown
