--- a/views/user/login.pug
+++ b/views/user/login.pug
@@ -13,7 +13,7 @@ html
     .login-dark(style='height: 100vh;color: rgb(255,255,255);')
       nav.navbar.navbar-light.navbar-expand-md
         .container-fluid
-          a.navbar-brand(href='/', style='color: rgba(255,255,255,0.9);') ShopPi
+          a.navbar-brand(href='/home', style='color: rgba(255,255,255,0.9);') ShopPi
           button.navbar-toggler(data-toggle='collapse', data-target='#navcol-1')
             span.sr-only Toggle navigation
             span.navbar-toggler-icon
