--- a/views/admin/user.pug
+++ b/views/admin/user.pug
@@ -3,7 +3,7 @@ block content
   //- breadcrumb
   .breadcrumb
     span
-      a(href='/') Client Page
+      a(href='/home') Client Page
     span.ml-2.mr-2  / 
     span Admin
     span.ml-2.mr-2  / 
