--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -47,7 +47,7 @@ block content
                   span.btn.btn-light.text-danger.border-danger.mt-1.ml-1= '$' + products[i].product_price
                   span.border.rounded-0.showQuantity.btn.btn-light.text-capitalize='in stock: ' + products[i].quantity
     .text-center.mt-5          
-        a(href="/?producer=&page=1").btn.btn-outline-light.text-secondary  More >
+        a(href="/home/?producer=&page=1").btn.btn-outline-light.text-secondary  More >
   section.cta(style="background-image:url('/public/home/img/bg-cta.jpg');")
     .cta-content
       .container
