--- a/views/layouts/admin.pug
+++ b/views/layouts/admin.pug
@@ -14,7 +14,7 @@ html
       .nav-right
         i.fas.fa-user-lock.mr-2(style='margin-top:20px')
         .ten-admin#adminName
-        a(href='/')
+        a(href='/home')
           .admin-signout(style='font-size: 15px;margin:17px 8px 0 8px') - Sign Out
     .left-menu
       a.left-menu__item(href='/admin/dashboard')
@@ -47,7 +47,7 @@ html
       .col
         p.text-right
           span Project on 
-          a(href='/')
+          a(href='/home')
             span Github 
             i.fab.fa-github
     script(src="/public/js/scripts.js")    
