--- a/views/admin/category.pug
+++ b/views/admin/category.pug
@@ -2,7 +2,7 @@ extends ../layouts/admin
 block content
   .breadcrumb
     span
-      a(href='/') Client Page
+      a(href='/home') Client Page
     span.ml-2.mr-2  / 
     span Admin
     span.ml-2.mr-2  / 
