--- a/views/cart/index.pug
+++ b/views/cart/index.pug
@@ -13,12 +13,12 @@ block content
             table.table.table-striped.text-center
               thead
                 tr
-                  th(scope='col')  
+                  th(scope='col')
                   th(scope='col') Product Name
                   th(scope='col') Producer
                   th.text-center(scope='col') Quantity
                   th.text-right(scope='col') Price
-                  th  
+                  th
               tbody
                 - let total = 0
                 each item in cart
@@ -41,10 +41,10 @@ block content
                     td
                       input.form-control.p-2(
                         name="proQuantity",
-                        type="number", 
-                        min="1", 
-                        max="5", 
-                        required, 
+                        type="number",
+                        min="1",
+                        max="5",
+                        required,
                         value = item.quantity
                         )
                     td.text-right.totalPriceOfProduct= "$" + (item.proPrice * item.quantity)
@@ -72,21 +72,90 @@ block content
         .col.mb-2
           .row
             .col-sm-12.col-md-6
-              a(href="/", style="text-decoration:none")
+              a(href="/home", style="text-decoration:none")
                 button(
-                  type="button", 
+                  type="button",
                   style='background: #bd2e52').btn.btn-block.mt-1 Continue Shopping
             .col-sm-12.col-md-6.text-right
               form(action="/cart/addBill", method = "POST")#addBill
                 input(type="hidden", value='', name="bill")#billValue
-                button#checkOut.btn.btn-lg.btn-block.btn-success.text-uppercase Checkout
+
+                //- confirm checkout
+                button(
+                    type='button',
+                    data-toggle='modal',
+                    data-target='#exampleModal'
+                  )#checkOut.btn.btn-lg.btn-block.btn-success.text-uppercase Checkout
+
+                .modal(tabindex='-1', role='dialog')#exampleModal.text-left
+                  .modal-dialog(role='document')
+                    .modal-content
+                      .modal-header
+                        h5.modal-title Confirm Your Orther
+                        button.close(type='button', data-dismiss='modal', aria-label='Close')
+                          span(aria-hidden='true') &times;
+                      .modal-body
+                        div(style='font-size:13px').text-left.text-muted We will give your items by this address :
+                        input.form-control(type='text' placeholder='Address' required)
+                        div(style='font-size:13px').text-left.text-muted What's phone number we can Contact with you?
+                        input.mt-2.form-control(type='text' placeholder='Phone Number' required)
+                        div.text-left.mt-3(onchange='handleChangePaymentMethod()') Select Payment Method :
+                          select.form-control
+                            option(value='pay_on_delivery') Pay on delivery
+                            option(value='credit_card') Credit Card
+                        //- For Credit Card
+                        #creditCardPaymentMethod(style='display: none')
+                          hr
+                          .text-center.text-muted Confirm your credit card
+                          .form-group
+                            label(for='username') Full name (on the card)
+                            input#cardUserName.form-control(type='text', name='username')
+                          // form-group.//
+                          .form-group
+                            label(for='cardNumber') Card number
+                            .input-group
+                              input.form-control#cardNumber(
+                                  type='text',
+                                  name='cardNumber',
+                                )
+                              //- The pattern
+                              //- pattern='^(?:4[0-9]{12}(?:[0-9]{3})?|(?:5[1-5][0-9]{2}|222[1-9]|22[3-9][0-9]|2[3-6][0-9]{2}|27[01][0-9]|2720)[0-9]{12})$'
+                              .input-group-append
+                                span.input-group-text.text-muted
+                                  i.fab.fa-cc-visa
+                                  i.fab.fa-cc-amex
+                                  i.fab.fa-cc-mastercard
+                          // form-group.//
+                          .row
+                            .col-sm-8
+                              .form-group
+                                label
+                                  span.hidden-xs Expiration
+                                .input-group
+                                  input#MM.form-control(type='number', placeholder='MM')
+                                  input#YY.form-control(type='number', placeholder='YY')
+                            .col-sm-4
+                              .form-group
+                                label(data-toggle='tooltip', title='', data-original-title='3 digits code on back side of the card')
+                                  | CVV
+                                  i.fa.fa-question-circle
+                                input#CVV.form-control(type='number')
+                              // form-group.//
+                          // row.//
+
+                        .modal-footer
+                          button.btn.btn-secondary(type='button', data-dismiss='modal') Close
+                          button.btn.btn-primary(type='submit', form='addBill') Save
+
+
+
     - else
       h3.text-center Your Cart is Empty
       h4.text-center
-        a(href="/").btn.btn-primary Go to shopping
+        a(href="/home").btn.btn-primary Go to shopping
   script.
     function confirmForm(form){
       if(confirm('Do You Want To Do It?')){
         form.submit();
       }
-    }  
+    }
