--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -1,6 +1,6 @@
 extends ../layouts/common
 block content
-  - const auth = user[0]
+  - const auth = user
     header(style="background:url('/public/home/img/bg-pattern.png'), linear-gradient(to left, #7b4397, #dc2430);height:10%;")
     .container(style="padding-top:60px")
       h1 Your Profile
@@ -8,7 +8,6 @@ block content
       h4= "user name : " + auth.user_name
       h4= "user email : " + auth.user_email
       h4= "user phone : " + auth.user_phone
-      h4= "user permission : " + auth.user_permission
       h4= "user group : " + auth.user_group
     script.
       const objAuth = {
